[gd_scene load_steps=3 format=3 uid="uid://jrp04r2xyf2m"]

[ext_resource type="Script" path="res://addons/texture_generator_plugin/generated_image.gd" id="1_bm4ks"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_xe86s"]

[node name="GeneratedImage" type="Panel"]
custom_minimum_size = Vector2(256, 320)
script = ExtResource("1_bm4ks")

[node name="OutputImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -104.0
offset_right = 96.0
offset_bottom = 88.0
texture = SubResource("PlaceholderTexture2D_xe86s")
expand_mode = 1

[node name="PromptLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -552.0
offset_top = -144.0
offset_right = 560.0
offset_bottom = -118.0
text = "yellow grass, stylized, cartoon"
horizontal_alignment = 1

[node name="SaveButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = 104.0
offset_right = -8.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
text = "Save"

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = 104.0
offset_right = 96.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
text = "Delete"

[connection signal="pressed" from="SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
